navigate to submenu on click, update readme, change dropdown behavior only on mobile, add regions, fix desktop layout

--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ h2 {
 .content-section {
   display: none;
   padding: 20px;
-  padding-bottom: 0;
+  padding-bottom: 4px;
   background-color: #1e1e1e;
   border-radius: 5px;
   margin-bottom: 8px;
@@ -740,8 +740,8 @@ h2 {
 }
 .dropdown-toggle {
   position: absolute;
-  right: 10px;
-  top: 15px;
+  right: 16px;
+  top: 16px;
   color: #aaa;
   font-size: 18px;
   cursor: pointer;
@@ -904,6 +904,17 @@ b {
   font-weight: 400;
   color: #aaa;
 }
+.link-open:before {
+  margin-left: 5px;
+}
+.location-name.clickable:hover {
+  color: #fff;
+  text-decoration: underline;
+}
+.cursor-pointer {
+  cursor: pointer;
+}
+
 @media (max-width: 991px) {
   .videos-grid, .favorites-grid {
     grid-template-columns: 1fr;
@@ -920,7 +931,7 @@ b {
   .sidebar {
     width: 0;
     padding-top: 16px;
-    top: 60px;
+    top: 44px;
     box-shadow: 5px 0 15px rgba(0, 0, 0, 0.2);
     padding-bottom: 100px;
   }
@@ -952,6 +963,7 @@ b {
   }
   .content-section {
     border-radius: 0;
+    padding-bottom: 4px;
   }
   .content-section-default {
     padding: 0;
